# Flourish

./: .gitignore  .replit  ARCHITECTURE.md  DEPLOYMENT.md  README.md  package-lock.json  package.json  render.yaml  replit.md  start.bat  start.ps1  turbo.json  vercel.json
apps/api/: .env.example  .env.production  Dockerfile  cert.crt  cert.key  cert.pem  key.pem  main.py  package.json  pyproject.toml  pytest.ini  railway.toml  requirements.txt  setup_database.py
apps/api/ai/: groq_chain.py  models.py  serializers.py  urls.py  views.py
apps/api/api/: __init__.py
apps/api/api/core/: auth.py  config.py
apps/api/api/db/: firestore.py  session.py  storage.py
apps/api/api/models/: chat.py  db_models.py  plant.py  task.py
apps/api/api/routes/: __init__.py  auth.py  chat.py  dashboard.py  documents.py  images.py  leaderboard.py  mcp.py  notifications.py  plants.py  storage.py  tasks.py
apps/api/api/services/: ai_service.py  autonomous_plant_service.py  ollama_service.py  plant_id_service.py  plant_service.py  weather_service.py
apps/api/core/: admin.py  models.py  serializers.py  urls.py  views.py
apps/api/haritpal-backend/: settings.py  urls.py
apps/api/tests/: __init__.py  test_api.py  test_config.py
apps/api/utils/: auth_middleware.py  authentication.py
apps/web/: .env.example  index.html  package.json  tailwind.config.ts  vite.config.ts
apps/web/src/: App.test.tsx  App.tsx  index.css  vite-env.d.ts
apps/web/src/components/: AIAssistant.tsx  AddPlantDialog.tsx  AddPlantForm.tsx  CareCalendar.tsx  Chat.tsx  DailyChecklist.tsx  DocumentAnalyzer.tsx  (+8 more)
(+13 files in other folders)
